WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37143
Chromium: worker exceptions are not shown in console
https://bugs.webkit.org/show_bug.cgi?id=37143
Summary
Chromium: worker exceptions are not shown in console
Andrey Kosyakov
Reported
2010-04-06 02:33:11 PDT
workerExceptions.html: <html> <script> var w = new Worker("workerException.js"); </script> </html> workerException.js: throw { }; EXPECTED: Loading workerException.html should cause a console message "Uncaught #<an Object>" to be printed to console. ACTUAL: nothing happens This stopped working after
r56402
, when semantics of EventTarget.dispatchEvent() was slightly changed. The code in WebWorkerClientImpl::postExceptionToWorkerObject(), however, was incorrect before, as EventTarget.dispatchEvent() is supposed to return true iff no event handlers called preventDefault() (i.e. event is unhandled).
Attachments
Fixed reporting of unhandled worker exceptions by inverting check for EventTarget.dispatchEvent result in accordance with its spec
(1.52 KB, patch)
2010-04-06 03:01 PDT
,
Andrey Kosyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrey Kosyakov
Comment 1
2010-04-06 03:01:32 PDT
Created
attachment 52619
[details]
Fixed reporting of unhandled worker exceptions by inverting check for EventTarget.dispatchEvent result in accordance with its spec
Yury Semikhatsky
Comment 2
2010-04-06 03:03:48 PDT
Comment on
attachment 52619
[details]
Fixed reporting of unhandled worker exceptions by inverting check for EventTarget.dispatchEvent result in accordance with its spec Please make sure this change doesn't break layout tests.
WebKit Commit Bot
Comment 3
2010-04-06 03:14:11 PDT
Comment on
attachment 52619
[details]
Fixed reporting of unhandled worker exceptions by inverting check for EventTarget.dispatchEvent result in accordance with its spec Clearing flags on attachment: 52619 Committed
r57138
: <
http://trac.webkit.org/changeset/57138
>
WebKit Commit Bot
Comment 4
2010-04-06 03:14:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug