2010-04-06  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Yury Semikhatsky.

        Fixed logging of unhndled worker exceptions.
        https://bugs.webkit.org/show_bug.cgi?id=37143

        * src/WebWorkerClientImpl.cpp:
        (WebKit::WebWorkerClientImpl::postExceptionToWorkerObject):

Canonical link: https://commits.webkit.org/48431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57138 268f45cc-cd09-0410-ab3c-d52691b4dbfc